# spa-integrations

./: .flake8  README.md  pyproject.toml
examples/: full-workflow-example.py  graphing-example.py
examples/data/run_0/: command.txt  config.dot  config.ini  config.json  output.txt  stats.txt  system.pc.com_1.device
examples/data/run_1/: command.txt  config.dot  config.ini  config.json  config.system.ruby.dot  output.txt  stats.txt  system.pc.com_1.device
examples/data/run_10/: command.txt  config.dot  config.ini  config.json  output.txt  stats.txt  system.pc.com_1.device
examples/data/run_11/: command.txt  config.dot  config.ini  config.json  output.txt  stats.txt  system.pc.com_1.device
examples/data/run_12/: command.txt  config.dot  config.ini  config.json  output.txt  stats.txt  system.pc.com_1.device
examples/data/run_13/: command.txt  config.dot  config.ini  config.json  output.txt  stats.txt  system.pc.com_1.device
examples/data/run_14/: command.txt  config.dot  config.ini  config.json  output.txt  stats.txt  system.pc.com_1.device
examples/data/run_15/: command.txt  config.dot  config.ini  config.json  output.txt  stats.txt  system.pc.com_1.device
examples/data/run_16/: command.txt  config.dot  config.ini  config.json  output.txt  stats.txt  system.pc.com_1.device
examples/data/run_17/: command.txt  config.dot  config.ini  config.json  output.txt  stats.txt  system.pc.com_1.device
examples/data/run_18/: command.txt  config.dot  config.ini  config.json  output.txt  stats.txt  (+1 more)
src/spa_integrations/: gem5.py  graphing.py  ui.py
(+78 files in other folders)
