[build-system]
requires = ['setuptools>=60.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'spa_integrations'
version = '0.0.1'
authors = [
  { name='Filip Mazurek', email='filip.mazurek@duke.edu' },
]
description = 'Collection of useful methods to use SPA with computer simulation'
readme = 'README.md'
requires-python = '>=3.7'
license = {file = 'LICENSE'}
classifiers = [
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache-2.0',
    'Programming Language :: Python :: 3',
]

dependencies = [
#    "spa@git+<url-to-repo>#egg=<branch or hash>",
#    "git+ssh://git@github.com/filipmazurek/spa-library@v0.0.1"
]

[project.urls]
'Homepage' = 'https://github.com/filipmazurek/spa-integrations'
